[gd_scene load_steps=3 format=3 uid="uid://bbwyd7q581iac"]

[ext_resource type="Script" uid="uid://ddvektvc7j4k8" path="res://ui/ajustes/graficos.gd" id="1_ke3rq"]
[ext_resource type="PackedScene" uid="uid://bd21ipd305of2" path="res://ui/elementos/LabelAjustes.tscn" id="1_m61wd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ke3rq")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.085
anchor_right = 1.0
anchor_bottom = 0.884
offset_top = -0.0800018
offset_bottom = 0.167969

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1152, 518)
layout_mode = 2
theme_override_constants/separation = 25

[node name="TextureRect" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_m61wd")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Resolucion de Pantalla"
max_font_size = 28

[node name="ResolutionButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/TextureRect"]
layout_direction = 4
layout_mode = 1
anchors_preset = -1
anchor_left = 1.026
anchor_top = 0.084
anchor_right = 2.212
anchor_bottom = 0.924
offset_top = 0.16
offset_right = 4.44006
offset_bottom = -0.240002
alignment = 1
autowrap_mode = 3
selected = 4
item_count = 7
popup/item_0/text = "5120×2160"
popup/item_0/id = 0
popup/item_1/text = "3840×2160"
popup/item_1/id = 1
popup/item_2/text = "3440×1440"
popup/item_2/id = 2
popup/item_3/text = "2560×1440"
popup/item_3/id = 3
popup/item_4/text = "1920×1080"
popup/item_4/id = 4
popup/item_5/text = "1600×900"
popup/item_5/id = 5
popup/item_6/text = "1280×720"
popup/item_6/id = 6
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_m61wd")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Calidad Grafica"
max_font_size = 40

[node name="QualityButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/TextureRect2"]
layout_direction = 4
layout_mode = 1
anchors_preset = -1
anchor_left = 1.022
anchor_top = 0.2
anchor_right = 2.217
anchor_bottom = 1.0
offset_left = -0.120026
offset_right = 0.179993
offset_bottom = 2.0
alignment = 1
autowrap_mode = 3
selected = 0
item_count = 3
popup/item_0/text = "Alta"
popup/item_0/id = 2
popup/item_1/text = "Media"
popup/item_1/id = 1
popup/item_2/text = "Baja"
popup/item_2/id = 0
metadata/_edit_use_anchors_ = true

[node name="TextureRect3" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_m61wd")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tipo de pantalla"
max_font_size = 40

[node name="ScreenModeButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/TextureRect3"]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.022
anchor_top = 0.133
anchor_right = 2.217
anchor_bottom = 0.967
offset_left = -0.120026
offset_top = 0.02
offset_right = 0.179993
offset_bottom = -0.0200043
alignment = 1
autowrap_mode = 3
selected = 0
item_count = 2
popup/item_0/text = "Pantalla Completa"
popup/item_0/id = 0
popup/item_1/text = "Modo Ventana"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect4" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_m61wd")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tasa de Refresco"
max_font_size = 30

[node name="RefreshButton" type="OptionButton" parent="ScrollContainer/VBoxContainer/TextureRect4"]
layout_direction = 4
layout_mode = 1
anchors_preset = -1
anchor_left = 1.022
anchor_top = 0.087
anchor_right = 2.217
anchor_bottom = 0.92
offset_left = -0.120026
offset_top = -0.0200005
offset_right = 0.179993
alignment = 1
autowrap_mode = 3
selected = 0
item_count = 5
popup/item_0/text = "60Hz"
popup/item_0/id = 0
popup/item_1/text = "75Hz"
popup/item_1/id = 1
popup/item_2/text = "120Hz"
popup/item_2/id = 2
popup/item_3/text = "144Hz"
popup/item_3/id = 3
popup/item_4/text = "165Hz"
popup/item_4/id = 4
metadata/_edit_use_anchors_ = true

[node name="TextureRect6" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_m61wd")]
custom_minimum_size = Vector2(518, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Sincronizacion Vertical"
max_font_size = 28

[node name="SynchronizationButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/TextureRect6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.577
anchor_top = 0.317
anchor_right = 1.662
anchor_bottom = 0.717
offset_left = 0.114014
offset_top = -0.0200005
offset_right = 0.0839844
offset_bottom = -0.0200005
text = "
"

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect6"]
layout_mode = 0
offset_left = 619.0
offset_top = 24.0
offset_right = 706.0
offset_bottom = 43.0
text = "Desactivada"

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/TextureRect6"]
layout_mode = 0
offset_left = 969.0
offset_top = 24.0
offset_right = 1056.0
offset_bottom = 43.0
text = "Activada"

[connection signal="item_selected" from="ScrollContainer/VBoxContainer/TextureRect/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/TextureRect2/QualityButton" to="." method="_on_QualityButton_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/TextureRect3/ScreenModeButton" to="." method="_on_ScreenModeButton_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/TextureRect4/RefreshButton" to="." method="_on_RefreshButton_item_selected"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/TextureRect6/SynchronizationButton" to="." method="_on_synchronization_button_toggled"]
